Changelog
=========

1.1 (unreleased)
----------------

- Instead of automatically using SuggestionFieldWidget fields, manually
  select which should be used as facets
  [lentinj]


1.0 (2013-08-01)
----------------

- Ensure filters are sorted by title
  [lentinj]


0.1 (2013-07-03)
----------------

- Initial release
  [lentinj]